<?xml version="1.0"?>
<package format="2">
  <name>robot_driver</name>
  <version>1.0.0</version>
  <description>Robot driver for camera and DAS tactile system</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python-opencv</exec_depend>
  <exec_depend>python-serial</exec_depend>

  <export>
  </export>
</package>